--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>devops-integration</finalName>
+		<finalName>account-service-main</finalName>
 	</build>
 
 </project>
